# any-auto-register

./: docker-compose.yml  pyproject.toml
api/: tasks.py
core/: base_mailbox.py  db.py  scheduler.py
frontend/src/: App.tsx
frontend/src/components/settings/: MailImportPanel.tsx
frontend/src/pages/: Accounts.tsx  RegisterTaskPage.tsx  Settings.tsx
services/mail_imports/: providers.py  registry.py  schemas.py  yahoo_import_rules.py
tests/: test_chatgpt_register.py
