[project]
name = "any-auto-register"
version = "1.0.0"
description = "多平台账号自动注册与管理系统"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "quart>=0.19.4",
    "sqlmodel>=0.0.16",
    "curl_cffi>=0.6.0",
    "requests>=2.31.0",
    "pysocks>=1.7.1",
    "playwright>=1.43.0",
    "patchright>=1.52.5",
    "pydantic>=2.0.0",
    "jwcrypto>=1.5.0",
    "cbor2>=5.4.0",
    "camoufox>=0.4.0",
    "aiofiles>=23.0.0",
    "rich>=13.7.1",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "names>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
